--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -13,8 +13,8 @@ command=$SCRIPT_DIR/volume
 interval=60
 signal=10
 
-[layout]
+#[layout]
 #label=layout
-command=current-layout
-interval=60
-signal=1
+#command=current-layout
+#interval=60
+#signal=1
