--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,17 @@
+# TMUX plugin manager
+set -g @tpm_plugins "            \
+  tmux-plugins/tpm               \
+  tmux-plugins/tmux-resurrect    \
+  tmux-plugins/tmux-continuum    \
+  tmux-plugins/tmux-sensible     \
+  christoomey/vim-tmux-navigator \
+  seebi/tmux-colors-solarized    \
+"
+
+set -g @continuum-restore 'on'
+set -g @colors-solarized '256'
+run-shell ~/.tmux/plugins/tpm/tpm
+
 set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
@@ -46,20 +60,4 @@ set-option -g renumber-windows on
 # Enable vi keys.
 setw -g mode-keys vi
 
-# List of plugins
-set -g @tpm_plugins "            \
-  tmux-plugins/tpm               \
-  tmux-plugins/tmux-resurrect    \
-  tmux-plugins/tmux-continuum    \
-  tmux-plugins/tmux-sensible     \
-  christoomey/vim-tmux-navigator \
-  seebi/tmux-colors-solarized    \
-"
-
-bind r source-file ~/.tmux.conf #\; display-message "Config reloaded..."
-
-set -g @continuum-restore 'on'
-set -g @colors-solarized '256'
-
-# Initializes TMUX plugin manager
-run-shell ~/.tmux/plugins/tpm/tpm
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
