--- a/i3/config
+++ b/i3/config
@@ -183,6 +183,7 @@ exec spotify
 # Background apps
 exec --no-startup-id ~/code/dotfiles/bin/polybar-launch
 exec --no-startup-id nm-applet
+exec --no-startup-id pasystray
 exec --no-startup-id blueman-applet
 exec --no-startup-id dropbox start
 exec --no-startup-id copyq
