--- a/alacritty.yml
+++ b/alacritty.yml
@@ -14,7 +14,7 @@ selection:
   save_to_clipboard: true
 
 schemes:
-  solarized-light: &light
+  solarized-light: &themeLight
     primary:
       background: '#fdf6e3' # base3
       foreground: '#657b83' # base00
@@ -46,7 +46,7 @@ schemes:
       cyan:    '#93a1a1' # base1
       white:   '#fdf6e3' # base3
 
-  solarized-dark: &dark
+  solarized-dark: &themeDark
     # Default colors
     primary:
       background: '#002b36' # base03
@@ -79,5 +79,4 @@ schemes:
       cyan:    '#93a1a1' # base1
       white:   '#fdf6e3' # base3
 
-# colors: *dark
-colors: *light
+colors: *themeDark
