--- a/i3/config
+++ b/i3/config
@@ -135,6 +135,8 @@ bindsym $mod+x exec flameshot gui
 # file-browser
 bindsym $mod+n exec nautilus ~/Downloads
 
+bindsym $mod+o exec ~/./apps/Obsidian-0.11.0.AppImage
+
 # Show a floating calc terminal with Mod+c
 for_window [instance="Alacritty" title="My Calculator"] floating enable
 bindsym $mod+c exec alacritty -t "My Calculator" -e calc
