--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ run-shell ~/.tmux/plugins/tpm/tpm
 set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
-set -as terminal-overrides ",screen-256color*:Tc"
+set-option terminal-overrides -sa ",screen-256color:RGB"
 # Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
