--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set -g @continuum-restore 'on'
 set -g @colors-solarized '256'
 run-shell ~/.tmux/plugins/tpm/tpm
 
-set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%Y %H:%M')"
+set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
 set -sa terminal-overrides ",screen-256color:RGB"
@@ -20,7 +20,7 @@ set -sa terminal-overrides ",screen-256color:RGB"
 set -g default-terminal "screen-256color"
 
 # disable rbenv variable in new panes
-set-environment -gu RBENV_VERSION
+# set-environment -gu RBENV_VERSION
 
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
