--- a/i3/config
+++ b/i3/config
@@ -133,7 +133,7 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+x exec flameshot gui
 
 # file-browser
-bindsym $mod+n exec nautilus ~/Downloads
+bindsym $mod+n exec nautilus ~
 
 bindsym $mod+o exec ~/./apps/Obsidian-0.11.0.AppImage
 
