--- a/alacritty.yml
+++ b/alacritty.yml
@@ -7,7 +7,7 @@ font:
 window:
   dynamic_padding: true
 
-  decorations: none
+  decorations: full
 
 bell:
   duration: 0
@@ -80,4 +80,4 @@ schemes:
       cyan:    '#93a1a1' # base1
       white:   '#fdf6e3' # base3
 
-colors: *themeDark
+colors: *themeLight
