--- a/i3/config
+++ b/i3/config
@@ -147,7 +147,7 @@ for_window [class="Spotify"] move to workspace $ws3
 assign [class="Slack"] 2
 assign [class="Todoist"] 2
 for_window [class="Todoist"] resize set width 25ppt
-assign [class="MineTime"] 2
+# assign [class="MineTime"] 2
 
 # Background apps
 exec --no-startup-id ~/code/dotfiles/bin/polybar-launch
@@ -164,7 +164,7 @@ exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/3440x1440/*
 # Startup applications
 exec alacritty --command tmux
 exec todoist
-exec minetime
+# exec minetime
 exec spotify
 exec sleep 5 && google-chrome
 exec weekday && sleep 20 && slack
