--- a/i3/config
+++ b/i3/config
@@ -160,7 +160,7 @@ exec --no-startup-id blueman-applet
 exec --no-startup-id copyq
 exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
-exec --no-startup-id redshift-gtk
+exec --no-startup-id redshift
 exec --no-startup-id dropbox start
 exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/imgur-1/*
 
