--- a/i3/config
+++ b/i3/config
@@ -129,8 +129,6 @@ bindsym $mod+x exec flameshot gui
 # file-browser
 bindsym $mod+n exec nautilus ~
 
-bindsym $mod+o exec ~/./apps/Obsidian-0.11.0.AppImage
-
 # Show a floating calc terminal with Mod+c
 for_window [instance="Alacritty" title="My Calculator"] floating enable
 bindsym $mod+c exec alacritty -t "My Calculator" -e bc
@@ -149,13 +147,13 @@ for_window [window_role="task_dialog"] floating enable
 # Application specific assignments
 for_window [class="Spotify"] move to workspace $ws3
 assign [class="Slack"] 2
-assign [class="Todoist"] 2
-assign [class="Obsidian"] 2
-for_window [class="Todoist"] resize set width 20ppt
+assign [class="obsidian"] 2
+assign [class="Todoist"] 3
+for_window [class="Todoist"] resize set width 30ppt
 
 # Background apps
-exec --no-startup-id ~/code/dotfiles/bin/polybar-launch
 exec --no-startup-id nm-applet
+exec --no-startup-id ~/code/dotfiles/bin/polybar-launch
 exec --no-startup-id pasystray
 exec --no-startup-id blueman-applet
 exec --no-startup-id copyq
@@ -169,6 +167,6 @@ exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/imgur-1/*
 exec alacritty --command tmux
 exec todoist
 exec obsidian
-exec weekday && slack
-exec spotify
 exec google-chrome
+exec weekday && sleep 20 && slack
+exec sleep 10 && spotify
