--- a/i3/config
+++ b/i3/config
@@ -130,6 +130,10 @@ bindsym $mod+n exec nautilus ~
 for_window [instance="Alacritty" title="My Calculator"] floating enable
 bindsym $mod+c exec alacritty -t "My Calculator" -e bc
 
+# Show todos
+for_window [instance="Alacritty" title="My Todos"] floating enable
+bindsym $mod+t exec alacritty -t "My Todos" -e nvim ~/Dropbox/notes/todo.md
+
 # Floating vim
 for_window [instance="Alacritty" title="Temp Vim"] floating enable
 bindsym $mod+v exec alacritty -t "Temp Vim" -e ~/bin/tempvim
@@ -143,8 +147,8 @@ for_window [window_role="task_dialog"] floating enable
 
 # Application specific assignments
 assign [class="Slack"] $ws2
-assign [class="obsidian"] $ws4
-assign [class="Todoist"] $ws2
+assign [class="obsidian"] $ws2
+# assign [class="Todoist"] $ws2
 for_window [class="Spotify"] move to workspace $ws3
 # for_window [class="Todoist"] resize set width 30ppt
 
@@ -164,8 +168,8 @@ set $connectCheck nm-online --quiet --timeout=300
 
 # Startup applications
 exec alacritty --command tmux
-exec todoist
+# exec todoist
 exec obsidian
 exec $connectCheck && google-chrome
-exec weekday && $connectCheck && slack
+# exec weekday && $connectCheck && slack
 exec $connectCheck && spotify
