--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,9 @@ set -g @continuum-restore 'on'
 set -g @colors-solarized '256'
 run-shell ~/.tmux/plugins/tpm/tpm
 
+# sort alphabetically
+bind s choose-tree -s -O name
+
 set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
