--- a/tmux.conf
+++ b/tmux.conf
@@ -64,3 +64,5 @@ set-option -g renumber-windows on
 setw -g mode-keys vi
 
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+set -sg escape-time 0
