--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set -sa terminal-overrides ",screen-256color:RGB"
 set -g default-terminal "screen-256color"
 
 # disable rbenv variable in new panes
-# set-environment -gu RBENV_VERSION
+set-environment -gu RBENV_VERSION
 
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
@@ -42,6 +42,8 @@ bind - split-window -v -c "#{pane_current_path}"
 
 # New panes have the same directory
 bind c new-window -c "#{pane_current_path}"
+
+bind n switch -t 0-notes
 
 # Pane resizing
 bind -r H resize-pane -L 15
