--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,5 +1,5 @@
 font:
-  size: 12
+  size: 14
   normal:
     family: 'JetBrainsMono NF'
     style: 'Regular'
@@ -13,6 +13,9 @@ bell:
 
 selection:
   save_to_clipboard: true
+
+key_bindings:
+   - { key: Key3,     mods: Alt,     chars: "#" }
 
 schemes:
   solarized-light: &themeLight
