--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,5 +1,5 @@
 font:
-  size: 14
+  size: 13
   normal:
     family: 'JetBrainsMono Nerd Font'
     style: 'Regular'
@@ -98,4 +98,4 @@ schemes:
       - { index: 20, color: '0x839496' }
       - { index: 21, color: '0xeee8d5' }
 
-colors: *themeLight
+colors: *themeDark
