--- a/i3status.conf
+++ b/i3status.conf
@@ -22,7 +22,7 @@ order += "cpu_usage"
 # order += "ethernet _first_"
 order += "battery 0"
 # order += "load"
-# order += "memory"
+order += "memory"
 order += "tztime local"
 
 cpu_usage {
