--- a/i3/config
+++ b/i3/config
@@ -6,6 +6,8 @@ font pango:JetBrainsMono 0
 bar {
   status_command i3status --config ~/.i3status.conf
   font pango:JetBrainsMono 12
+  # output DP-0
+  tray_output DP-0
 }
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
@@ -105,6 +107,8 @@ bindsym $mod+Shift+3 move container to workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 
+bindsym $mod+p move workspace to output right
+
 # reload or restart i3
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
@@ -148,12 +152,19 @@ for_window [window_role="task_dialog"] floating enable
 
 # Application specific assignments
 assign [class="Slack"] $ws3
-assign [class="obsidian"] $ws4
-# for_window [class="Spotify"] move to workspace $ws3
-# for_window [class="pocket-casts"] move to workspace $ws3
+assign [class="obsidian"] $ws2
+for_window [class="Spotify"] move to workspace $ws3
+for_window [class="pocket-casts"] move to workspace $ws3
+
+set $main_monitor DP-0
+set $second_monitor HDMI-0
+
+workspace $ws1 output $main_monitor
+workspace $ws2 output $main_monitor
+workspace $ws3 output $second_monitor
 
 # Background apps
-exec --no-startup-id ~/code/dotfiles/scripts/auto-brightness
+# exec --no-startup-id ~/code/dotfiles/scripts/auto-brightness
 exec --no-startup-id nm-applet
 exec --no-startup-id pasystray
 exec --no-startup-id blueman-applet
@@ -163,9 +174,9 @@ exec --no-startup-id playerctld daemon
 exec --no-startup-id dropbox start
 exec --no-startup-id emote
 exec --no-startup-id guake
-exec --no-startup-id mullvad
+# exec --no-startup-id mullvad
 exec --no-startup-id playerctld daemon
-exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/imgur-1/*
+exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/3840x2160/*
 
 set $connectCheck nm-online --quiet --timeout=300
 
@@ -173,6 +184,6 @@ set $connectCheck nm-online --quiet --timeout=300
 exec alacritty --command tmux
 exec obsidian
 exec $connectCheck && google-chrome
-exec weekday && $connectCheck && slack
+# exec weekday && $connectCheck && slack
 # exec $connectCheck && spotify
 exec $connectCheck && pocket-casts
