--- a/tmux.conf
+++ b/tmux.conf
@@ -13,9 +13,9 @@ set -g @colors-solarized '256'
 run-shell ~/.tmux/plugins/tpm/tpm
 
 # sort alphabetically
-bind C-s choose-tree -Zw -O name
+bind s choose-tree -swZ -O name
 
-bind s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+# bind C-s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 
