--- a/i3/config
+++ b/i3/config
@@ -125,7 +125,7 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+x exec flameshot gui
 
 # file-browser
-bindsym $mod+n exec nautilus ~
+bindsym $mod+n exec nautilus ~/Downloads
 
 # Show a floating calc terminal with Mod+c
 for_window [instance="Alacritty" title="My Calculator"] floating enable
@@ -167,7 +167,6 @@ exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
 exec --no-startup-id dropbox start
 exec --no-startup-id emote
-bindsym $mod+Shift+e exec --no-startup-id emote
 exec --no-startup-id guake
 # exec --no-startup-id mullvad
 exec --no-startup-id playerctld daemon
@@ -179,5 +178,5 @@ set $connectCheck nm-online --quiet --timeout=300
 exec alacritty --command tmux
 exec obsidian
 exec $connectCheck && google-chrome
-# exec weekday && $connectCheck && slack
+exec weekday && $connectCheck && slack
 # exec $connectCheck && spotify
